2006-08-22  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: RESN support
	* src/GrampsDb/_WriteGedcom.py: RESN support
	* src/GrampsDb/_GedTokens.py: RESN support
	* src/GrampsDb/_WriteGedcom.py: apply event type string conversion 
	fix to family types

2006-08-22  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: show url when no description (#0000319)

2006-08-22  Alex Roitman  <shura@gramps-project.org>
	* src/Filters/Rules/Person/_IsDescendantFamilyOf.py: Rewrite.
	* src/Filters/_FilterParser.py (startElement): Upgrade existing
	custom_filters file from Media to MediaObject.
	* src/Selectors/_SelectEvent.py (get_handle_column): Correct
	handle column number.
	* configure.in: Reflect directory change.
	* src/Filters/Rules/MediaObject/Makefile.am: Reflect directory change.
	* src/Filters/Rules/Makefile.am (SUBDIRS): Reflect directory change.
	* src/Filters/Rules/MediaObject: Added to replace Media.
	* src/Filters/Rules/Media: Removed.
	* src/DataViews/_MediaView.py (filter_editor): Change Media to
	MediaObject.
	* src/Filters/_GenericFilter.py: Change Media to MediaObject.
	* src/DataViews/_PersonView.py (build_widget): Pass uistate
	to filter class.
	* src/PageView.py (ListView.build_filter_container): Pass uistate
	to filter class.
	* src/DisplayState.py (DisplayState.__signals__): Register
	'filters-changed' signal.
	* src/FilterEditor/_ShowResults.py: Change Media to MediaObject.
	* src/FilterEditor/_EditRule.py: Change Media to MediaObject;
	(__init__): Work with empty filter names (new filter).
	* src/FilterEditor/_FilterEditor.py (close): Emit 'filters-changed'.
	* src/Filters/SideBar/*py: Take uistate and connect to the
	'filters-changed' signal.
	* src/glade/gramps.glade: Make MediaRef editor's General label bold.

2006-08-21  Alex Roitman  <shura@gramps-project.org>
	* src/FilterEditor/_FilterEditor.py (close): Override parent's close.
	* src/Filters/_FilterMenu.py (build_filter_menu,