@@ -1,3 +1,6 @@
+2006-08-22  Alex Roitman  <shura@gramps-project.org>
+	* src/plugins/EventCmp.py: Add proper date sorting.
+
 2006-08-22  Don Allingham  <don@gramps-project.org>
 	* src/GrampsDb/_ReadGedcom.py: RESN support
 	* src/GrampsDb/_WriteGedcom.py: RESN support
